asset/style.css
body {
    min-height: 101vh;
    background-color: #f9f9f9;
}

body,
button,
input,
select,
textarea {
    color: #333;
    font-family: 'Lato', sans-serif;
}

@media (min-width: 1200px) {
    .container {
        max-width: 1150px;
    }
}

img {
    height: auto;
    max-width: 100%;
}

.page-top {
    background-color: #edeef0;
}

a,a.h1,a.h2,a.h3,a.h4,a.h5,a.h6 {
    color: #0073bb;
    text-decoration: none;
}

a:hover, a:focus {
    color: #0073bb;
    text-decoration: none;
}
a.use-visited-color:visited {
    color: #609;
}
.btn-link {
    color: #0073bb;
}
.breadcrumb a, .breadcrumb a:hover, .breadcrumb a:focus,.breadcrumb > .active {
    text-decoration: none;
}

.index-category-img {
    width: 100%;
    height: 160px;
    object-fit: cover;
}


.img-cover-center {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
}

.pt-100 {
    padding-top: 100%;
}

.file-simple .fileuploader {
    margin: 0;
}

.listing-recommended {
    background-image:
        linear-gradient(
                to left,
                #fffef2,
                white 40%
        );
}

.form-listing-description-textarea {
    min-height: 17rem;
}

.cascader-main {
    margin-bottom: 1rem;
}

.cascader-branch.cascader-click {
    cursor: pointer;
    padding-top: 0.3rem;
    padding-bottom: 0.4rem;
}

.cascader-branch.cascader-click {
    padding-left: 1rem;
    padding-right: 1rem;
}

@media (min-width: 992px) {
    .cascader-branch-list {
        border-right: 1px solid #343a40;
    }

    .cascader-branch-list-header {
        padding-left: 1rem;
        padding-right: 1rem;
    }

    .cascader-level-0 .cascader-branch-list-header {
        padding-left: 0rem;
        padding-right: 0rem;
    }
}

.cascader-branch.cascader-click:hover {
    background-color: #e1e1e1;
}

.cascader-branch.cascader-click.cascader-selected {
    background-color: #343a40;
    color: white;
}

.index-category-title {
    margin-bottom: 0.75rem;
    font-size: 1.7rem;
    text-shadow: 1px 1px 1px #000, 0px 0px 3px #000000;
    background-color: rgba(52, 58, 64, 0.69);
    border-radius: 15px;
}

@media (min-width: 768px) {
    .col-checkbox-pull-down {
        margin-top: 2.0rem;
    }
}

.collapsing {
    transition-duration: 0s;
}

.list-small-img {
    max-height: 6rem;
    min-width: 4rem;
}

.listing-status-pending {
    color: #c69500;
}

.listing-status-expired, .listing-status-deactivated, .listing-status-user-removed {
    color: #9e9e9e;
}

.listing-status-active, .listing-status-active-featured {
    color: #4CAF50;
}

.listing-status-rejected, .listing-status-admin-removed {
    color: #f44336;
}

.text-warning-color {
    color: #f44336;
}

@media (max-width: 768px) {
    .w-100-small {
        width: 100%;
    }
}

.container-remove-padding {
    padding-right: 0;
    padding-left: 0;
}

@media (max-width: 768px) {
    .page-item {
        display: none;
    }
    .page-item.prev {
        display: block;
        width: 50%;
        text-align: center;
    }
    .page-item.next {
        display: block;
        width: 50%;
        text-align: center;
    }
}

#main-navbar .nav-link {
    padding-top: 0;
    padding-bottom: 0;
}


.listing-list-img {
    max-height: 10rem;
}

.user-listings-feature-this-link {
    color: #f44336;
}

.zoom-wrapper {
    display: inline;
    position: relative;
}

.zoom-wrapper .zoom {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 50;
    width: 90px;
    height: 90px;
    color: #fff;
    font-size: 50px;
    margin-left: -45px;
    margin-top: -45px;
    background-color: rgba(0,0,0,.25);
    display: block;
    cursor: pointer;
}

.zoom .fa {
    margin: 20px 0 0 25px;
}

.link-list-item {
    display: block;
    border-top: 1px solid rgba(0, 0, 0, 0.125);
    padding: 0.5rem 1.25rem;
}

.link-list-item:first-child {
    border: none;
}

.link-list-item.active {
    color: #fff;
    background-color: #007bff;
    border-color: #007bff;
}

.link-list-item:hover {
    z-index: 2;
    color: #fff;
    background-color: #6c757d;
    border-color: #6c757d;
}

.d-none-soft:not(.show)  {
    display: none;
}
@media (min-width: 576px) {
    .d-sm-none-soft {
        display: none;
    }
}

@media (max-width: 576px) {
    .mobile-link {
        display: inline-block;
        padding-top: 0.1rem;
        padding-bottom: 0.1rem;
    }

    .category-link {
        font-size: 1.2rem;
    }
}

.card {
    background-color: #f8f9fa;
}

.listing-list .card {
    background-color: #fff;
}

.btn-light {
    background-color: #f3f3f3;
}

.nested-sortable-group {
    display: block;
    list-style: none;
    margin-bottom: 0.3rem;
}

.nested-sortable-item {
    display: block;
    position: relative;
    margin-bottom: 0.3rem;
    line-height: 3rem;
    border: 1px solid #ebebeb;
    padding-left: 1rem;
}

.cursor-pointer, .sortableHandle {
    cursor: pointer;
}

.sortableHandle {
    padding: 0.5rem;
}

input.form-control, textarea.form-control, select.form-control {
    background-color: #fcfcfc;
}

.name-value-group {
    display: inline-block;
    color: #303641;
    background-color: #d6d6d8;
    border-radius: 3px;
    padding: 6px 12px 6px 0;
}

.name-value-group .name {
    display: inline;
    background-color: #c3c3c7;
    padding: 8px;
    margin-right: 8px;
    border-radius: 3px;
}

.shadow-level-1 {
    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
    box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
    border: 1px solid white;
}

.border-radius-1 {
    border-radius: 0.25rem;
}

.listing-show-description {
    background: white;
    border: 1px solid #dddddd;
}

@media (min-width: 768px) {
    .listing-show-description {
        background: #ecedef;
        border: none;
    }

    .listing-show-description-content {
        background: white;
        border-radius: 4px;
    }
}

.force-single-line {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    min-width: 0; /* flex fix */
}

